# Tester

./: .gitignore  README.md  pyproject.toml  requirements.txt
web_tester/: __init__.py  __main__.py  agent.py  cli.py  config.py  exceptions.py
web_tester/browser/: controller.py  screenshot.py
web_tester/storage/: reporter.py  session.py
web_tester/tools/: browser_tools.py
