[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "web-tester"
version = "0.1.0"
description = "AI web testing agent powered by smolagents + Playwright"
requires-python = ">=3.10"

[project.scripts]
web-tester = "web_tester.cli:main"

[tool.ruff]
line-length = 100

[tool.pytest.ini_options]
asyncio_mode = "auto"
